--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,106 @@
     margin: 0;
     padding: 0;
 }
+
+.header-box {
+    padding: 30px;
+}
+.nav-container {
+    max-width: 1200px;
+    height: 60px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.logo {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+}
+
+.logo a{
+    text-decoration: none;
+}
+
+.header-logo-h2{
+    margin: 0;
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    letter-spacing: 0.06em;
+    line-height: 35px;
+    color: #F1CDB3;
+    padding-bottom: 10px;
+    transition: all 0.3s ease-in-out;
+}
+
+.header-logo-h2:hover {
+    color: #FFFFFF;
+    
+}
+
+.header-logo-p {
+    margin: 0;
+    font-family: "Arial";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    letter-spacing: 0.1em;
+    line-height: 15px;
+    text-align: center;
+    color: #FFFFFF;
+    transition: all 0.3s ease-in-out;
+}
+
+.header-logo-text:hover {
+    color: #F1CDB3;
+    
+}
+
+.navbar-list {
+    list-style-type: none;
+}
+
+.nav-item {
+    font-family: "Arial";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    letter-spacing: 0.1em;
+    line-height: 24px;
+    margin-right: 30px;
+    color: #CDCDCD;
+    display: inline;
+    text-align: center;
+}
+.nav-item:last-child {
+    margin-right: 0;
+}
+
+.active {
+    font-family: "Arial";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    letter-spacing: 0;
+    color: #FAFAFA;
+    border-bottom: 3px solid #F1CDB3;
+    display: inline;
+    margin-right: 35px;
+}
+.active:hover {
+    cursor: pointer;
+    color: #FAFAFA;
+}
+
+.nav-link {
+    text-decoration: none;
+    margin-right: 0;
+    transition-duration: 0.3s;
+}
+
