--- a/css/style.css
+++ b/css/style.css
@@ -251,3 +251,151 @@ section {
     margin-top: 0;
     margin-bottom: 0;
 }
+
+.pets-friends {
+    background: #F6F6F6;
+}
+
+.pets-container{
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.pets-griend-h3 {
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0.06em;
+    font-size: 35px;
+    width: 400px;
+    height: 90px;
+    line-height: 45px;
+    margin-left: 400px;
+    color: #545454;
+    text-align: center;
+    margin-bottom: 60px;
+    padding-top: 40px;
+}
+
+.arrow-item {
+    width: 52px;
+    height: 52px;
+    border: 2px solid #F1CDB3;
+    border-radius: 50px;
+    margin-top: 130px;
+    transition: all 0.2s ease-in-out;
+}
+
+.arrow-item:hover {
+    cursor: pointer;
+    background: #FDDCC4;
+   
+}
+
+.arrow-left {
+    position: relative;
+    top: 12px;
+    left: 0px;
+}
+
+.slider{
+    display: flex;
+    justify-content: space-evenly;
+}
+.card-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+    transition: all 0.2s ease-in-out;
+}
+
+.card-item:hover {
+    cursor: pointer;
+    box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
+    background-color: #FFFFFF; }
+
+
+.kate3,.jane3,.Wood3{
+    margin: 0;
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0.06em;
+    font-size: 20px;
+    line-height: 23px;
+    padding-top: 30px;
+    color: #545454;
+}
+
+.pets-button {
+    width: 187px;
+    height: 52px;
+    border-radius: 100px;
+    border: 2px solid #F1CDB3;
+    background-color: #FAFAFA;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0.06em;
+    font-size: 17px;
+    line-height: 22px;
+    color: #292929;
+}
+
+.arrow-right {
+    position: relative;
+    left: 0px;
+    top: 13px;
+}
+
+.rest-pets {
+    display: inline-block;
+    text-decoration: none;
+    background: #F1CDB3;
+    border-radius: 100px;
+    padding: 15px 45px;
+    margin-bottom: 100px;
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0.06em;
+    font-size: 17px;
+    line-height: 22px;
+    color: #292929;
+    transition: all 0.2s ease-in-out;
+}
+
+.rest-pets:hover {
+
+    background: #FDDCC4;
+    
+}
+
+.donation-box {
+    background: #FFFFFF;
+
+}
+
+.donat-containe {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+
+.dotat-h3 {
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0.06em;
+    width: 310px;
+    height: 90px;
+    font-size: 35px;
+    line-height: 45px;
+    margin: 79px auto 0;
+    text-align: center;
+    color: #545454;
+}
