--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,16 @@
     margin: 0;
     padding: 0;
 }
+
+html  {
+        scroll-behavior: smooth;
+      }
+
 body {
     background-image: url(../img/start-screen-gradient-background.svg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center
+    background-position: center;
 }
 .header-box {
     padding: 30px;
@@ -500,3 +505,96 @@ section {
 
 
 
+.fooret-box {
+    width: 1200px;
+}
+.footer-container{
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.mail-fone, .location{
+    align-items: center;
+    margin-top: 56px;
+    margin-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    width: 302px;
+    height: 234px;
+    margin-right: 160px;
+    margin-left: 160px;
+}
+
+
+.conatct-list,
+.location-list {
+    list-style: none;
+    margin-top: 30px;
+
+}
+
+.contacts-h2{
+    margin: 0;
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0.06em;
+    font-size: 35px;
+    line-height: 45px;
+    width: 280px;
+    height: 90px;
+    color: #FFFFFF;
+}
+
+.fone-link,
+.mail_link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    padding-top: 7px;
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0.06em;
+    font-size: 20px;
+    line-height: 23px;
+    color: #F1CDB3;
+    margin-bottom: 30px;
+}
+ .img-contact {
+    margin-right: 15px;
+ }
+
+.location-h2{
+    margin: 0;
+    width: 270px;
+    height: 90px;
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0.06em;
+    font-size: 35px;
+    line-height: 45px;
+    color: #FFFFFF
+}
+
+.adress-boston, 
+.adress-london {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    font-family: "Georgia";
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0.06em;
+    font-size: 20px;
+    line-height: 23px;
+    color: #F1CDB3;
+    margin-bottom: 15px;
+}
+
+.img-local {
+    margin-right: 15px;
+}
