--- a/css/style.css
+++ b/css/style.css
@@ -576,10 +576,24 @@ section {
     line-height: 23px;
     color: #F1CDB3;
     margin-bottom: 30px;
+    transition: all 0.1s ease-in-out;
 }
+
+.fone-link:hover,
+.mail_link:hover {
+    color: #FDDCC4;
+}
+
  .img-contact {
     margin-right: 15px;
+    transition: all 0.1s ease-in-out;
  }
+ .img-contact:hover {
+    color: #FDDCC4;
+ }
+
+
+
 
 .location-h2{
     margin: 0;
@@ -607,11 +621,22 @@ section {
     line-height: 23px;
     color: #F1CDB3;
     margin-bottom: 15px;
+    transition: all 0.1s ease-in-out;
+}
+
+.adress-boston:hover, 
+.adress-london:hover {
+    color: #FDDCC4;
 }
 
 .img-local {
     margin-right: 15px;
+    transition: all 0.1s ease-in-out;
 }
+.img-local:hover {
+    color: #FDDCC4;
+}
+
 
 
 .fotter-puppe {
