--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body {
     width: 100%;
     background-color: #f1cdb3;
     z-index: 5;
+
 }
 .bigMac-logo {
     width: 30px;
@@ -56,14 +57,6 @@ body {
 .bigMac-logo.active {
     transform: rotate(90deg);
   }
-
-  .bigMac-item {
-    height: 2px;
-    width: 100%;
-    background-color: #f1cdb3;
-    z-index: 5;
-  }
-
   .active-item {
     color: #FAFAFA;
     padding-bottom: 3px;
@@ -74,9 +67,7 @@ body {
     margin-bottom: 43px;
   }
   
-  .bigMac-menu.active {
-    right: 0;
-  }
+ 
 
   /*header box*/
 
@@ -732,10 +723,40 @@ section {
         margin: 0;
         padding: 0;
     }
+
     .bigMac-logo {
-        display: flex;
+        display: block;
         flex-direction: column;
         justify-content: space-between;
+        position: relative;
+        width: 38px;
+        height: 18px;
+        cursor: pointer;
+        z-index: 10;
+
         
+      }
+      .bigMac-menu.active {
+        right: 0;
+      }
+      .bigMac-item {
+
+        height: 2px;
+        width: 100%;
+        position: absolute;
+        z-index: 5;
+        background-color: #f1cdb3;
+        transition: all 0.3s ease 0s;
+      }
+      .bigMac-item span,
+      .bigMac-item::before,
+      .bigMac-item::after{
+        content: "";
+      }
+      .bigMac-item::before{
+        top: 0;
+      } 
+      .bigMac-item::after{
+        bottom: 0;
       }
 }
