--- a/css/style_pets.css
+++ b/css/style_pets.css
@@ -6,7 +6,9 @@
     border: 0;
     box-sizing: border-box;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 html, body {
     height: 100%;
     line-height: 1;
