--- a/css/style_pets.css
+++ b/css/style_pets.css
@@ -26,25 +26,6 @@ ul, li{
 min-height: 100%;
 }
 
-.page {
-    padding: 90px 0px 30px 0px;
-}
-
-.page-section {
-    padding: 30px;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-
-.page-title {
-    font-size: 40px;
-    margin: 0px 0px 20px 0px;
-}
-
-.page-text{
-    margin: 0px 0px 20px 0px;
-}
 
 .header {
     position: fixed;
@@ -52,31 +33,80 @@ min-height: 100%;
     left: 0;
     width: 100%;
     z-index: 10;
-    background-color: black;
+    background-color: #FFFFFF;
 }
 
 .bigMac-container {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
-    padding: 0px 30px;
+    padding: 30px 0px 30px 0px;
     text-align: center;
     justify-content: space-between;
     min-height: 70px;
     align-items: center;
 }
-
 .header-logo {
-
+    text-decoration: none;
 }
+
+.header-logo-h2{
+    margin: 0;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    letter-spacing: 0.06em;
+    line-height: 35px;
+    padding-bottom: 10px;
+    transition: all 0.3s ease-in-out;
+    color: #545454;
+}
+
+.header-text-p {
+    margin: 0;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    letter-spacing: 0.1em;
+    line-height: 15px;
+    text-align: center;
+    transition: all 0.3s ease-in-out;
+    color: #545454;
+}
+.header-logo-h2:hover,
+.header-text-p:hover {
+    opacity: 0.4;
+    cursor: pointer;
+    
+}
+
 
 .menu_icon{
     display: none;
 }
 
-.menu_list > li{
+a {
+    text-decoration: none;
+}
+
+.menu_list li{
     position: relative;
-    margin: 0px 0px 0px 20px;
+    margin: 0px 0px 0px 35px;
+}
+ .nav-link {
+    color: #545454;
+    font-size: 16px;
+    line-height: 24px;
+    transition: color 0.3s ease-in-out;
+ }
+
+ .nav-link:hover {
+    cursor: pointer;
+    border-bottom: 3px solid #F1CDB3;
+
+}
+.active-link{
+    border-bottom: 3px solid #F1CDB3;
 }
 
 .menu-link {
@@ -86,6 +116,30 @@ min-height: 100%;
 .menu-link:hover {
     text-decoration: underline;
 }
+
+/*main section*/
+.our-pets {
+    background: #F6F6F6;
+    padding-top: 80px;
+}
+.container{
+    max-width: 1200px;
+}
+.pets-content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.our-pets,
+.pets-content,
+.text-h2{
+    margin-bottom: 60px;
+    color: #545454;
+}
+
+
 
 
 @media (min-width:767px) {
@@ -116,7 +170,7 @@ min-height: 100%;
         height: 10%;
         width: 100%;
         transition: all 0.3s ease 0s;
-        background-color: white;
+        background-color:black;
     }
     .menu_icon::before,
     .menu_icon::after {
