--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@
     padding: 0;
 }
 
-
+html{
+    scroll-behavior: smooth;
+}
 
 body {
     background-image: url(../img/start-screen-gradient-background.svg);
