--- a/css/style_pets.css
+++ b/css/style_pets.css
@@ -142,7 +142,6 @@ a {
 .our-pets,
 .pets-content,
 .text-h2{
-    margin-bottom: 60px;
     color: #545454;
 }
 
@@ -158,6 +157,8 @@ a {
     align-items: center;
     flex-wrap: wrap;
     gap: 30px 40px;
+    padding-bottom: 60px;
+    margin-top: 60px;
 }
 
 .pets-card {
@@ -203,7 +204,181 @@ a {
 }
 
 
+.navigation-kit{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding-bottom: 100px;
+}
+
+.first-btn, 
+.back-btn {
+    color: #CDCDCD;
+    border: 2px solid #CDCDCD;
+    width: 52px;
+    height: 52px;
+    border-radius: 100px;
+    cursor: not-allowed;
+    transition: all 0.5s ease-in-out;
+}
+.active-nav {
+    background-color: #F1CDB3;
+}
+
+.nav-btn {
+    cursor: pointer;
+    width: 52px;
+    height: 52px;
+    border-radius: 100px;
+}
+.next-btn,
+.last-btn {
+    border: 2px solid #F1CDB3;
+    width: 52px;
+    height: 52px;
+    transition: all 0.5s ease-in-out
+}
+
+.next-btn:hover,
+.last-btn:hover {
+    background-color:#F1CDB3;
+    box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.08);
+}
+
+        /*Footer*/
+
+        .fooret-box {
+            padding-top: 20px;
+            font-family: Georgia, sans-serif;
+            background: url(../img/start-screen-gradient-background.svg), radial-gradient(100% 900% at 0% 0%, #5b483a 0%, #262425 100%), linear-gradient(0deg, #211f20, #211f20);
+            background-size: cover;
+            color: #FFFFFF;
+        }
+        
+        .footer-container{
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center
+        }
+        
+        .mail-fone, .location{
+            flex-direction: column;
+            width: 302px;
+            height: 234px;
+           
+        }
+        
+        
+        .conatct-list,
+        .location-list {
+            list-style: none;
+            margin-top: 30px;
+        
+        }
+        
+        .contacts-h2{
+            margin: 0;
+            font-family: "Georgia";
+            font-style: normal;
+            font-weight: 400;
+            letter-spacing: 0.06em;
+            font-size: 35px;
+            line-height: 45px;
+            width: 280px;
+            height: 90px;
+            color: #FFFFFF;
+        }
+        
+        .fone-link,
+        .mail_link {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            padding-top: 7px;
+            font-family: "Georgia";
+            font-style: normal;
+            font-weight: 400;
+            letter-spacing: 0.06em;
+            font-size: 20px;
+            line-height: 23px;
+            color: #F1CDB3;
+            margin-bottom: 30px;
+            transition: all 0.1s ease-in-out;
+        }
+        
+        .fone-link:hover,
+        .mail_link:hover {
+            color: #FDDCC4;
+        }
+        
+         .img-contact {
+            margin-right: 15px;
+            transition: all 0.1s ease-in-out;
+         }
+         .img-contact:hover {
+            color: #FDDCC4;
+         }
+        
+        
+        
+        
+        .location-h2{
+            margin: 0;
+            width: 270px;
+            height: 90px;
+            font-family: "Georgia";
+            font-style: normal;
+            font-weight: 400;
+            letter-spacing: 0.06em;
+            font-size: 35px;
+            line-height: 45px;
+            color: #FFFFFF
+        }
+        
+        .adress-boston, 
+        .adress-london {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            font-family: "Georgia";
+            font-style: normal;
+            font-weight: 400;
+            letter-spacing: 0.06em;
+            font-size: 20px;
+            line-height: 23px;
+            color: #F1CDB3;
+            margin-bottom: 35px;
+            transition: all 0.1s ease-in-out;
+        }
+        
+        .adress-boston:hover, 
+        .adress-london:hover {
+            color: #FDDCC4;
+        }
+        
+        .img-local {
+            margin-right: 15px;
+            transition: all 0.1s ease-in-out;
+        }
+        .img-local:hover {
+            color: #FDDCC4;
+        }
+        
+        
+        
+        .fotter-puppe {
+            
+            display: flex;
+        }
+
+                
+
 @media (min-width:767px) {
+    .bigMac-container {
+        padding: 30px 40px 30px 40px;
+    }
     .menu_list{
         display: flex;
         align-items: left;
@@ -211,10 +386,20 @@ a {
     .menu_list > li {
         padding: 10px 0px;
     }
-
+    .our-pets {
+        width: 100%;
+    }
 }
+    /*767*/
 
 @media(max-width:767px) {
+    .wrapper {
+        width: 100%;
+        }
+    .bigMac-container {
+        padding: 30px 40px 30px 40px;
+        width: 100%;
+    }
     .menu_icon{
         z-index: 5;
         display: block;
@@ -296,6 +481,141 @@ a {
     .menu-link {
         font-size: 22px;
     }
-
-
+.our-pets {
+    width: 100%;
 }
+.kit-pets{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.conatct-list {
+    margin-top: 25px;
+}
+.location {
+   margin-top: 25px;
+}
+.fotter-puppe {
+margin-top: 25px;
+}
+}
+
+@media(max-width:850px) {
+    .wrapper {
+        width: 100%;
+        }
+    .bigMac-container {
+        padding: 30px 40px 30px 40px;
+        width: 100%;
+    }
+    .menu_icon{
+        z-index: 5;
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 18px;
+        cursor: pointer;
+    }
+    .menu_icon span,
+    .menu_icon::before,
+    .menu_icon::after{
+        left: 0;
+        position: absolute;
+        height: 10%;
+        width: 100%;
+        transition: all 0.3s ease 0s;
+        background-color:black;
+    }
+    .menu_icon::before,
+    .menu_icon::after {
+        content: "";
+    }
+    .menu_icon::before {
+        top: 0;
+    }
+
+    .menu_icon::after {
+        bottom: 0;
+    }
+    .menu_icon span {
+        top: 50%;
+        transform: scale(1) translate(0px, -50%);
+    }
+
+    .menu_icon._active span {
+        transform: scale(0) translate(0px, -50%);
+    }
+    .menu_icon._active::before {
+        top: 50%;
+        transform: rotate(-45deg) translate(0, -50%);
+    }
+
+    .menu_icon._active::after {
+        top: 50%;
+        transform: rotate(45deg) translate(0, 50%);
+    }
+
+    .menu_body {
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: fit-content;
+        height: 100%;
+        background-color:black;
+        padding: 100px 30px 30px 30px;
+        transition: left 0.3s ease 0s;
+    }
+    .menu_body._active {
+        left: 0;
+    }
+    .menu_body::before {
+        content: "";
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        height: 70px;
+        z-index: 2;
+    }
+
+    .menu_list > li {
+        flex-wrap: wrap;
+        margin: 0px 0px 30px 0px;
+    }
+    .menu-link > il :last-child {
+        margin-bottom: 0;
+    }
+
+    .menu-link {
+        font-size: 22px;
+    }
+.our-pets {
+    width: 100%;
+}
+.kit-pets{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.conatct-list {
+    margin-top: 25px;
+}
+.location {
+   margin-top: 25px;
+}
+.fotter-puppe {
+margin-top: 25px;
+}
+}
+
+
