--- a/css/style_pets.css
+++ b/css/style_pets.css
@@ -390,6 +390,232 @@ a {
         width: 100%;
     }
 }
+
+@media(max-width:1196px) {
+    .wrapper {
+        width: 100%;
+        }
+    .bigMac-container {
+        padding: 30px 40px 30px 40px;
+        width: 100%;
+    }
+    .menu_icon{
+        z-index: 5;
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 18px;
+        cursor: pointer;
+    }
+    .menu_icon span,
+    .menu_icon::before,
+    .menu_icon::after{
+        left: 0;
+        position: absolute;
+        height: 10%;
+        width: 100%;
+        transition: all 0.3s ease 0s;
+        background-color:black;
+    }
+    .menu_icon::before,
+    .menu_icon::after {
+        content: "";
+    }
+    .menu_icon::before {
+        top: 0;
+    }
+
+    .menu_icon::after {
+        bottom: 0;
+    }
+    .menu_icon span {
+        top: 50%;
+        transform: scale(1) translate(0px, -50%);
+    }
+
+    .menu_icon._active span {
+        transform: scale(0) translate(0px, -50%);
+    }
+    .menu_icon._active::before {
+        top: 50%;
+        transform: rotate(-45deg) translate(0, -50%);
+    }
+
+    .menu_icon._active::after {
+        top: 50%;
+        transform: rotate(45deg) translate(0, 50%);
+    }
+
+    .menu_body {
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: fit-content;
+        height: 100%;
+        background-color:black;
+        padding: 100px 30px 30px 30px;
+        transition: left 0.3s ease 0s;
+    }
+    .menu_body._active {
+        left: 0;
+    }
+    .menu_body::before {
+        content: "";
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        height: 70px;
+        z-index: 2;
+    }
+
+    .menu_list > li {
+        flex-wrap: wrap;
+        margin: 0px 0px 30px 0px;
+    }
+    .menu-link > il :last-child {
+        margin-bottom: 0;
+    }
+
+    .menu-link {
+        font-size: 22px;
+    }
+.our-pets {
+    width: 100%;
+}
+.kit-pets{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.conatct-list {
+    margin-top: 25px;
+}
+.location {
+   margin-top: 25px;
+}
+.fotter-puppe {
+margin-top: 25px;
+}
+}
+
+@media(max-width:900px) {
+    .wrapper {
+        width: 100%;
+        }
+    .bigMac-container {
+        padding: 30px 40px 30px 40px;
+        width: 100%;
+    }
+    .menu_icon{
+        z-index: 5;
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 18px;
+        cursor: pointer;
+    }
+    .menu_icon span,
+    .menu_icon::before,
+    .menu_icon::after{
+        left: 0;
+        position: absolute;
+        height: 10%;
+        width: 100%;
+        transition: all 0.3s ease 0s;
+        background-color:black;
+    }
+    .menu_icon::before,
+    .menu_icon::after {
+        content: "";
+    }
+    .menu_icon::before {
+        top: 0;
+    }
+
+    .menu_icon::after {
+        bottom: 0;
+    }
+    .menu_icon span {
+        top: 50%;
+        transform: scale(1) translate(0px, -50%);
+    }
+
+    .menu_icon._active span {
+        transform: scale(0) translate(0px, -50%);
+    }
+    .menu_icon._active::before {
+        top: 50%;
+        transform: rotate(-45deg) translate(0, -50%);
+    }
+
+    .menu_icon._active::after {
+        top: 50%;
+        transform: rotate(45deg) translate(0, 50%);
+    }
+
+    .menu_body {
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: fit-content;
+        height: 100%;
+        background-color:black;
+        padding: 100px 30px 30px 30px;
+        transition: left 0.3s ease 0s;
+    }
+    .menu_body._active {
+        left: 0;
+    }
+    .menu_body::before {
+        content: "";
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        height: 70px;
+        z-index: 2;
+    }
+
+    .menu_list > li {
+        flex-wrap: wrap;
+        margin: 0px 0px 30px 0px;
+    }
+    .menu-link > il :last-child {
+        margin-bottom: 0;
+    }
+
+    .menu-link {
+        font-size: 22px;
+    }
+.our-pets {
+    width: 100%;
+}
+.kit-pets{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.conatct-list {
+    margin-top: 25px;
+}
+.location {
+   margin-top: 25px;
+}
+.fotter-puppe {
+margin-top: 25px;
+}
+}
     /*767*/
 
 @media(max-width:767px) {
@@ -505,7 +731,7 @@ margin-top: 25px;
 }
 }
 
-@media(max-width:850px) {
+@media(max-width:568px) {
     .wrapper {
         width: 100%;
         }
