--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
 *,
 *::before,
-*::after{
+*::after {
     padding: 0;
     margin: 0;
     border: 0;
     box-sizing: border-box;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
 
-ul, li{
+ul, li {
     list-style: none;
     text-align: left;
 }
@@ -48,7 +48,7 @@ ul, li{
     text-decoration: none;
 }
 
-.header-logo-h2{
+.header-logo-h2 {
     margin: 0;
     line-height: 35px;
     font-style: normal;
@@ -82,7 +82,7 @@ ul, li{
 }
 
 
-.menu_icon{
+.menu_icon {
     display: none;
 }
 
@@ -90,7 +90,7 @@ a {
     text-decoration: none;
 }
 
-.menu_list li{
+.menu_list li {
     position: relative;
     margin: 0px 0px 0px 35px;
 }
@@ -108,7 +108,7 @@ a {
     border-bottom: 3px solid #F1CDB3;
 }
 
-.active-link{
+.active-link {
     border-bottom: 3px solid #F1CDB3;
     color: #FAFAFA;
     padding-bottom: 3px;
@@ -122,10 +122,7 @@ a {
     text-decoration: underline;
 }
 
-
-
-
-.maine-start{
+.maine-start {
     margin: 0;
     display: flex;
     padding-top: 150px;
@@ -137,7 +134,7 @@ a {
 
 }
 
-.start-srceen-container{ 
+.start-srceen-container { 
     display: flex;
     justify-content: space-evenly;
     max-width: 1200px;
@@ -202,7 +199,10 @@ a {
   }
 
 .about-container {
+    width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
   .about-pets{
     margin-top: 80px;
@@ -432,10 +432,6 @@ a {
     color: #545454;
 }
 
-
-
-
-
 .donation-box {
     background: #FFFFFF;
     margin: 0;
@@ -647,15 +643,16 @@ a {
 }
 
 
-@media (min-width:767px) {
+@media(min-width:768px) {
     .bigMac-container {
         padding: 30px 40px 30px 40px;
     }
-    .menu_list{
+    .menu_list {
         display: flex;
     align-items: left;
-    flex-direction: column;
+    
     }
+
     .menu_list > li {
         padding: 10px 0px;
     }
@@ -777,7 +774,8 @@ a {
         align-items: center;
         margin-bottom: 90px;
     }
-    }
+
+  
     .not-only-p {
         width: 100%;
         margin: 20px 0px 0px 0px;
@@ -865,7 +863,7 @@ a {
 .fotter-puppe {
 margin-top: 25px;
 }
-
+}
 
 
 @media(max-width:568px) {
